Fixed the login interface showing up behind side panel bug Simple edit: removed z-index: -1 from the header in the CSS

--- a/mathchat.css
+++ b/mathchat.css
@@ -26,8 +26,6 @@ body {
     
     background-color: white;
     
-    z-index: -1;
-    
     font-family: 'Titillium-Web', sans-serif;
 }
 
